--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background-image: url(bgimage.jpg);
+    background-image: url('C:/Users/sumuk/Desktop/colleague_wellbeing/images/bgimage.jpg');
     background-size: cover;
 }
 
