--- a/css/style_home.css
+++ b/css/style_home.css
@@ -1,8 +1,6 @@
 
-
-
 .hero-image {
-    background-image: url(images/bg_image1.jpg);
+    background-image: url('C:/Users/sumuk/Desktop/colleague_wellbeing/images/Health.jpg');
     
     height: 200px;
     
@@ -10,4 +8,252 @@
     background-repeat: no-repeat;
     background-size: 75% 100%;
     position: relative;
+}   
+
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
+body, html{
+  height: 100%;
+  background: #222222;
+	font-family: 'Lato', sans-serif;
+}
+
+.container{
+  display: block;
+  position: relative;
+  margin: 40px auto;
+  height: auto;
+  width: 500px;
+  padding: 20px;
+}
+
+h3 {
+	color: #AAAAAA;
+}
+
+.container ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+	overflow: auto;
+}
+
+ul li{
+  color: #AAAAAA;
+  display: block;
+  position: relative;
+  float: left;
+  width: 100%;
+  height: 100px;
+	border-bottom: 1px solid #333;
+}
+
+ul li input[type=radio]{
+  position: absolute;
+  visibility: hidden;
+}
+
+ul li label{
+  display: block;
+  position: relative;
+  font-weight: 300;
+  font-size: 1.35em;
+  padding: 25px 25px 25px 80px;
+  margin: 10px auto;
+  height: 30px;
+  z-index: 9;
+  cursor: pointer;
+  -webkit-transition: all 0.25s linear;
+}
+
+ul li:hover label{
+	color: #FFFFFF;
+}
+
+ul li .check{
+  display: block;
+  position: absolute;
+  border: 5px solid #AAAAAA;
+  border-radius: 100%;
+  height: 35px;
+  width: 35px;
+  top: 30px;
+  left: 20px;
+	z-index: 5;
+	transition: border .25s linear;
+	-webkit-transition: border .25s linear;
+}
+
+ul li:hover .check {
+  border: 5px solid #FFFFFF;
+}
+
+ul li .check::before {
+  display: block;
+  position: absolute;
+	content: '';
+  border-radius: 100%;
+  height: 15px;
+  width: 15px;
+  top: 5px;
+	left: 5px;
+  margin: auto;
+	transition: background 0.25s linear;
+	-webkit-transition: background 0.25s linear;
+}
+
+input[type=radio]:checked ~ .check {
+  border: 5px solid white;
+}
+
+input[type=radio]:checked ~ .check::before{
+  background: #E55000;
+}
+
+input[type=radio]:checked ~ label{
+  color: white;
+}
+
+.signature {
+	margin: 10px auto;
+	padding: 10px 0;
+	width: 100%;
+}
+
+.signature p{
+	text-align: center;
+	font-family: Helvetica, Arial, Sans-Serif;
+	font-size: 0.85em;
+	color: #AAAAAA;
+}
+
+.signature .much-heart{
+	display: inline-block;
+	position: relative;
+	margin: 0 4px;
+	height: 10px;
+	width: 10px;
+	background: #AC1D3F;
+	border-radius: 4px;
+	-ms-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.signature .much-heart::before, 
+.signature .much-heart::after {
+	  display: block;
+  content: '';
+  position: absolute;
+  margin: auto;
+  height: 10px;
+  width: 10px;
+  border-radius: 5px;
+  background: #AC1D3F;
+  top: -4px;
+}
+
+.signature .much-heart::after {
+	bottom: 0;
+	top: auto;
+	left: -4px;
+}
+
+.signature a {
+	color: #AAAAAA;
+	text-decoration: none;
+	font-weight: bold;
+}
+
+
+/*style for slider 1*/
+@import url("https://fonts.googleapis.com/css?family=Lato:400,400i,700");
+
+
+
+
+div.sliderContainer {
+ width: 25em;
+ text-align: center;
+}
+
+#slider {
+  -webkit-appearance: none;
+  margin-left: 190%;
+  appearance: none;
+  height: 18px !important;
+  width: 100%;
+  border-radius: 10em;
+  background-image: linear-gradient(to right, red ,green);
+  outline: none;
+  margin-bottom: 14px;
+}
+
+#slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background:#eff0ee;
+  cursor: pointer;
+  border: 3px solid #f4f4f4;
+}
+
+
+#slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background-color:#eaeeea;
+  cursor: pointer;
+  border: 3px solid #f4f4f4;
+}
+
+#output {
+ color: #d3d3d3;
+ font-family: Lato, sans-serif;
+ letter-spacing: 1.5px;
+ font-size: 20px;
+ margin-left: 5px;
+}
+
+/*style for slider 2*/
+.slidecontainer {
+  width: 100%;
+}
+
+.slider {
+  background-image: linear-gradient(to right, red ,green);
+  border-radius: 40%;
+  -webkit-appearance: none;
+  width: 30%;
+  height: 25px;
+  margin-left: 35%;
+  
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  background: white;
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #4CAF50;
+  cursor: pointer;
 }
